# spm

./: CHANGELOG.md  Cargo.toml  Claude.md  IMPLEMENTATION.md  LICENSE  README.md  spec.md  test.yml
.github/workflows/: ci.yml  release.yml
crates/spm-cli/: Cargo.toml
crates/spm-cli/src/: main.rs
crates/spm-compress/: Cargo.toml
crates/spm-compress/src/: lib.rs
crates/spm-core/: Cargo.toml
crates/spm-core/src/: alternatives.rs  config.rs  deps.rs  distro.rs  error.rs  filetree.rs  lib.rs  planner.rs  progress.rs  types.rs
crates/spm-cpio/: Cargo.toml
crates/spm-cpio/src/: lib.rs
crates/spm-deb/: Cargo.toml
crates/spm-deb/src/: ar.rs  builder.rs  control.rs  error.rs  lib.rs  reader.rs
crates/spm-rpm/: Cargo.toml
crates/spm-rpm/src/: builder.rs  error.rs  header.rs  lead.rs  lib.rs  reader.rs  signature.rs  tags.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md
docs/phases/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5a.md  phase-5b.md
packaging/: spm.yaml
tests/fixtures/: full.yaml  large.yaml  minimal.yaml
tests/fixtures/invalid/: bad_arch.yaml  missing_name.yaml
