[package]
name = "spm-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CLI frontend for spm: large-file-aware Linux package builder"

[[bin]]
name = "spm"
path = "src/main.rs"

[dependencies]
spm-core = { path = "../spm-core" }
spm-rpm = { path = "../spm-rpm" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
