[package]
name = "spm-rpm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "RPM package builder for spm"

[dependencies]
spm-core = { path = "../spm-core" }
spm-cpio = { path = "../spm-cpio" }
spm-compress = { path = "../spm-compress" }
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
thiserror = "2"
tempfile = "3"
